@@ -1,2 +1,7 @@
 # GamesOrg_RockPaperScissors
 Rock paper scissors
+Commands used in VS code
+ git config --global user.email XXX@gmail.com
+  git config --global user.name "XX XX"
+  javac --module-path C:\javafx-sdk-21.0.9\lib --add-modules javafx.controls RockPaperScissorsJavaFX.java
+   java --module-path C:\javafx-sdk-21.0.9\lib --add-modules javafx.controls RockPaperScissorsJavaFX 
